bin/testsuite/tests/compiler/src/errors/compiler5035.swg
#global testerror "Err0569"

var x = 10000000000000000's16
